# core

./: .gitignore  .temphia  Cargo.toml  go.mod  go.sum  main.go  makefile
backend/plane/: event_bus.go  lite.go  router.go
backend/sdk/go_client_sdk/: client.go
backend/sdk/goja_plug_sdk/: package-lock.json  package.json  rollup.config.js
backend/sdk/goja_plug_sdk/lib/: cabinet.ts  core.ts  http.ts  index.ts  plugkv.ts  sockd.ts
backend/sdk/rust_plug_wasm2_sdk/: Cargo.toml
backend/sdk/rust_plug_wasm2_sdk/src/: lib.rs
backend/sdk/rust_plug_wasm2_test/: Cargo.toml  main.go
backend/sdk/rust_plug_wasm2_test/src/: lib.rs
backend/server/app/: app.go  builder.go  builder_compo.go  server.go  server_route_v1.go
backend/server/app/config/: config.go
backend/server/app/routes/: admin.go  admin_bprint.go  admin_plug.go  admin_resource.go  (+17 more)
backend/server/btypes/: btypes.go
backend/server/controller/: controller.go
backend/server/engine/: engine.go  eutils.go  exec_client.go  exec_client_ssr.go  launcher.go
backend/server/lib/: lib.go  map.go
backend/server/registry/: global.go  registry.go
backend/tests/mbindings/: mbindings.go  mcabinet.go  mplugkv.go  msockd.go
contrib/: claim.json  example.pg.sql  newgroup.json  xtemphia
data/: data.go  embed.go  repo.go
data/repo/: example1_schema.json  pingpong1_schema.json
data/schema/: schema_postgres.sql
data/templates/: suborigin_loader.js
docs/: arch.md
frontend/: package-lock.json  package.json  tsconfig.package.json
frontend/src/entries/: page_auth.ts
frontend/src/services/: apm.ts  app.ts
(+294 files in other folders)
